--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Oct 05 18:06:05 EDT 2022
-sdk.dir=/Users/abbyandam/Library/Android/sdk
+#Wed Oct 05 19:22:43 EDT 2022
+sdk.dir=C\:\\Users\\swk70\\AppData\\Local\\Android\\Sdk
